k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-reliability-monitor
  namespace: api-reliability-monitor
spec:
  selector:
    app: api-reliability-monitor
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
